# rust-project

./: .env.example  .gitignore  ALL_FIXES_COMPLETE.md  ANTI_CORRUPTION_LAYER_SUCCESS.md  API.md  API_CRUD_INTEGRATION_REPORT.md  BACKEND_ROADMAP.md  BACKEND_STATUS_REPORT.md  BACKEND_SUMMARY.md  BACKEND_TIMELINE.md  CHANGELOG.md  COMPONENT_FIXES.md  CQRS_IMPLEMENTATION_REPORT.md  CRITICAL_ISSUES_FIXED.md  FIXES_APPLIED.md  FRONTEND_API_MATRIX.md  FRONTEND_COMPLETION_PROGRESS.md  FRONTEND_SPRINT_PLAN_NO_AUTH.md  IMPLEMENTATION_GUIDE.md  PROJECT_STATUS_REPORT.md  QUICKSTART.md  QUICK_START_BACKEND.md  README.md  SETUP.md  SETUP_BACKEND.md  SUMMARY.md  TESTING_GUIDE.md  TODO_COMPLETION_REPORT.md  docker-compose.yml  idea.md  package-lock.json  prometheus.yml
backend/: .env.example  ARCHITECTURE.md  BUILD_TROUBLESHOOTING.md  COMPILE_READY.md  COMPLETION_SUMMARY.md  CQRS_IMPLEMENTATION_COMPLETE.md  Cargo.toml  DATA_MODEL.md  Dockerfile  FIXES_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  SQLITE_MIGRATION_STATUS.md  TESTING.md  fix-build.ps1  package-lock.json  package.json  start.bat  start.sh  test-api.ps1
backend/migrations/: 001_create_users_table.sql  002_create_clients_table.sql  003_create_tasks_table.sql  004_create_notifications_table.sql  005_create_files_table.sql  006_create_activities_table.sql  007_seed_demo_data.sql  008_create_event_store.sql  009_create_file_system_tables.sql  010_create_fts5_search.sql  010_create_fulltext_search.sql  011_add_clients_notes.sql  011_create_refresh_tokens_table.sql  012_create_audit_logs.sql  012_create_rbac_tables.sql  013_add_performance_indexes.sql  014_create_rbac_tables.sql  015_create_users_history_table.sql  016_create_report_export_jobs.sql  017_branches_scopes.sql  018_fs_versions_acl_stars_activity.sql  018_report_export_date_range.sql  018_seed_system_users.sql  019_system_settings.sql  022_create_menus.sql  023_drop_users_role_column.sql
backend/postman/: crm-backend.postman_collection.json
backend/scripts/: init_database.ps1  init_database.sh  seed_admin_and_app_users.sql
backend/src/: app_state.rs  config.rs  error.rs  main.rs  routes.rs  routes.rs.backup
backend/src/api/: authorization.rs  branch_cqrs.rs  cqrs_handlers.rs  file_system.rs  file_system_cqrs.rs  mod.rs  rbac_cqrs.rs  tasks_cqrs.rs  users_cqrs.rs
backend/src/authz/: branch_loader.rs  context.rs  data_scope.rs  files_policy.rs  loader.rs  mod.rs  permissions.rs  settings_loader.rs
backend/src/core/: mod.rs
backend/src/domains/: mod.rs
backend/src/handlers/: activities.rs  admin.rs  analytics.rs  auth.rs  clients.rs  dashboard.rs  export.rs  file_system.rs  files.rs  health.rs  menus.rs  mod.rs  notifications.rs  reports.rs  search.rs  settings.rs  tasks.rs  users.rs  websocket.rs
backend/src/integrations/: messaging.rs  mod.rs  object_storage.rs
backend/src/middleware/: auth.rs  deprecation.rs  mod.rs  rate_limit.rs  rbac.rs
backend/src/models/: activity.rs  client.rs  file.rs  mod.rs  notification.rs  refresh_token.rs  report_export_job.rs  task.rs  user.rs
backend/src/routes/: file_system.rs
backend/src/services/: mod.rs
backend/src/utils/: audit.rs  file_validator.rs  (+4 more)
(+177 files in other folders)
