[package]
name = "crm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework - AXUM
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database - SQLite (H2 compatible)
# Note: uuid feature enables TEXT-based UUID support for SQLite
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
anyhow = "1.0"
thiserror = "1.0"

# CQRS & Event Sourcing
async-trait = "0.1"
dashmap = "5.5"

# Redis for Event Bus
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

# Additional utilities
itertools = "0.12"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
