[package]
name = "crm-backend"
version = "0.1.0"
edition = "2021"
default-run = "crm-backend"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
futures-util = "0.3"

# Web framework - AXUM
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database — PostgreSQL 17 (see backend/migrations)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
mime_guess = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics (for future Prometheus integration)
# metrics = "0.21"
# metrics-exporter-prometheus = "0.13"

# Environment
anyhow = "1.0"
thiserror = "1.0"

# CQRS & Event Sourcing
async-trait = "0.1"
dashmap = "5.5"

# Redis for Event Bus
redis = { version = "0.32.5", features = ["tokio-comp", "streams"] }

# Additional utilities
itertools = "0.12"
lapin = "4.3.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
urlencoding = "2.1.3"
image = "0.25.10"

[target.'cfg(not(windows))'.dependencies]
rdkafka = "0.39.0"

[[bin]]
name = "hash_password"
path = "src/bin/hash_password.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
